--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style2.css">
-    <title>Document</title>
+    <title>Notify.</title>
 </head>
 <body>
     <header class=cabeçalho></header>
@@ -17,9 +17,14 @@
         <div><img class="hand" src="images/hand.png" alt=""></div>
 
         <div>
-            <p class="notify">Notify.</p>
-            <p class='text1'>A great new free psd theme to showcase</p>
-            <p class='text2'>your new application.</p>
+            <p class="notify">Notify<span>.</span></p>
+            <p class='text1'>A great new free psd theme to showcase <br>your new application.</p>
+        </div>
+
+        <div id='logoapps'>
+            <img class='android' src="images/icone-android.png" alt="">
+            <img class='ios' src="images/icone-ios.png" alt="">
+            <img class='windows' src="images/icone-windows.png" alt="">
         </div>
     </section>
 
@@ -47,7 +52,7 @@
         <div class='box2'>
         <h3>Get Notified Of Any Updates!</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt <br>voluptatem repudiandae ratione modi tenetur obcaecati eum animi <br> corporis quisquam, harum maiores, ad temporibus deserunt natus optio <br> tempora impedit, saepe atque.</p>
-        <input type="email" placeholder="Email adress"> <button>Notify</button>
+        <input class='email' type="email" placeholder="Email adress"> <button>Notify</button>
         </div>
 
         <aside>
@@ -55,6 +60,43 @@
         </aside>
     </section>
 
-    <footer>footer</footer>
+    <section class='container4'>
+        <div>
+            <p class='lorem'>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda quos natus exercitationem vel illo illum tenetur explicabo possimus facere sequi. <br> Accusantium adipisci molestiae maxime perspiciatis, ipsum ipsam fuga illo commodi."</p>
+            <p class='jane'>Jane Hunt</p>
+        </div>
+
+        <div class='fotos'>
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+            <img class='pessoa' src="images/pessoa1.jpg" alt="">
+        </div>
+
+        <div class='textfinal'>
+            <h2 class='morango'>Say Hi & Get in Touch</h2>
+            <p class='banana'>Lorem ipsum dolor sit amet consectetur adipisicing elit consectetur adipisicing elit.</p>
+        </div>
+    </section>
+
+    <footer class='footer'>
+        <div>
+            <a href="">Contact</a>
+            <a href="">Download</a>
+            <a href="">Press</a>
+            <a href="">Email</a>
+            <a href="">Support</a>
+            <a href="">Privacy Policy</a>
+        </div>
+    </footer>
 </body>
 </html>
